--- a/index.html
+++ b/index.html
@@ -11,6 +11,33 @@
     
     <h1>Odin Recipes</h1>
 
+    <img src="./images/lasagna.webp" alt="Photo of lasagna" width="500">
+    <h2>Description</h2>
+    <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Meat (beef)</li>
+        <li>Onions and garlics</li>
+        <li>Tomatoes</li>
+        <li>Sugar</li>
+        <li>Spices</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Eggs</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
+    <a href="./recipes/lasagna.html">Lasagna</a>
+
+    
+
 </body>
 
 </html>
