--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
     <h1>Odin Recipes</h1>
 
-
-    <a href="./recipes/lasagna.html">Lasagna</a>
-
-
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken-lemon.html">Grilled Lemon and Yogurt Chicken</a></li>
+    </ul>
 
 </body>
 
