--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/chicken-lemon.html">Grilled Lemon and Yogurt Chicken</a></li>
+        <li><a href="./recipes/macaroni.html">Simple Macaroni and Cheese</a></li>
     </ul>
 
 </body>
