--- a/recipes/chicken-lemon.html
+++ b/recipes/chicken-lemon.html
@@ -28,7 +28,7 @@
         <li>Whisk together yogurt, garlic, lemon juice and zest, olive oil, paprika, herbes de Provence, salt, and black pepper in a medium bowl. Pour into a large resealable plastic bag. Add chicken; stir to coat. Squeeze out excess air and seal the bag. Marinate in the refrigerator for at least 3 hours.</li>
         <li>Preheat an outdoor grill for medium-high heat and lightly oil the grate.</li>
         <li>Make sauce: Stir together yogurt, lemon juice, and harissa in a small bowl until combined. Set aside.</li>
-        <li>emove chicken to a plate or baking sheet lined with paper towels; discard marinade. Pat chicken dry with more paper towels. Season with a pinch of salt.</li>
+        <li>Remove chicken to a plate or baking sheet lined with paper towels; discard marinade. Pat chicken dry with more paper towels. Season with a pinch of salt.</li>
         <li>Grill chicken, skin-side down, on the preheated grill for 2 minutes. Turn over each piece and move to indirect heat. Continue grilling, turning often, with the lid down until well browned and meat is no longer pink in the center, 30 to 35 minutes. An instant-read thermometer inserted into the thickest part of the thigh, near the bone, should read 165 degrees F (74 degrees C).</li>
         <li>Serve chicken with sauce on the side.</li>
     </ol>
